--- a/index.html
+++ b/index.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>ID Technology | Inteligencia y Desarrollo a su Medida</title>
+    
+    <!-- Descripción para SEO -->
+    <meta name="description" content="ID Technology ofrece soluciones personalizadas en soporte técnico, desarrollo de software, distribución de hardware y software, y automatización de procesos para maximizar la eficiencia de su empresa." />
+
+    <!-- Palabras clave para SEO -->
+    <meta name="keywords" content="ID Technology, soporte técnico, desarrollo de software, automatización de procesos, inteligencia de negocios, Medellín, Colombia" />
+
+    <!-- Configuración de Open Graph para compartir en redes sociales -->
+    <meta property="og:title" content="ID Technology | Inteligencia y Desarrollo a su Medida" />
+    <meta property="og:description" content="Soluciones a la medida en soporte técnico, desarrollo de software, y automatización de procesos." />
+    <meta property="og:image" content="/Icon.png" />
+    <meta property="og:url" content="https://www.idtechnology.com/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="es_ES" />
+
+    <!-- Configuración de Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="ID Technology | Inteligencia y Desarrollo a su Medida" />
+    <meta name="twitter:description" content="Soluciones personalizadas en soporte técnico, desarrollo de software, y automatización de procesos." />
+    <meta name="twitter:image" content="/Icon.png" />
+
+    <!-- Autor y derechos de autor -->
+    <meta name="author" content="ID Technology" />
+    <meta name="copyright" content="ID Technology" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/Icon.png" />
+
+    <!-- Robots y Indexación -->
+    <meta name="robots" content="index, follow" />
   </head>
-  <body className="dark">
+  <body class="light">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
